# lumos

./: .gitignore  .golangci.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cmd/lumos/: main.go
cmd/lumos/cli/: commands.go  root.go
internal/automation/: automation.go
internal/budget/: budget.go  budget_test.go
internal/collector/: plugin.go  plugin_test.go
internal/config/: config.go  config_test.go
internal/config/testdata/: valid.yaml
internal/device/: device.go
internal/device/android/: adb.go  android.go  android_test.go  app.go  battery.go  battery_test.go  cpu.go  dedup_test.go  discover.go  fps.go  fps_bench_test.go  fps_fast.go  launch.go  mem.go  parsers_test.go  perfetto.go  perfetto_capture.go  perfetto_test.go  sampler.go  threads_test.go
internal/device/ios/: app.go  discover.go  idb.go  ios_test.go  sampler.go
internal/doctor/: doctor.go  doctor_test.go
internal/interactive/: interactive.go  interactive_test.go  keys.go  model.go  render.go  sparkline.go  watch.go
internal/logging/: logging.go
internal/metrics/: types.go
internal/pyharness/: embed.go
internal/pyharness/python/: harness.py
internal/pyharness/python/lumos/: __init__.py  device.py  rpc.py
internal/report/: clock.go  compare.go  csv.go  csv_test.go  html.go  html_test.go  report.go  report_test.go  threads_test.go  trends.go  trends_test.go
internal/report/templates/: report.html.tmpl  trends.html.tmpl
internal/runner/: runner.go  runner_test.go  scenario.go  trace_test.go
internal/scheduler/: scheduler.go  scheduler_test.go  stress_test.go
pkg/lumos/python/: README.md  pyproject.toml
pkg/lumos/python/lumos/: appium.py
pkg/lumos/python/tests/: test_appium.py
scenarios/examples/: appium_login.py  home_scroll.py  integration.yaml  ios_safari_scroll.py  settings_scroll.py  smoke.yaml
